# ogz-source

./: .gitignore  .qovery.yml  CNAME  CONTRIBUTING.md  README.md  README.md.bak  Vagrantfile  build-clean.bat  build-linux-clean.sh  build-linux.sh  build-win32-VS2019.bat  build-win32-VS2022.bat  build-win32-continuous.bat  build-win32.bat  nixbuild-deps-setup.sh  nixbuild-deps-setup.sh.md  sh.exe.stackdump
radio-proxy-master/: .gitignore  CMakeLists.txt
radio-proxy-master/src/: ClientResponse.cpp  ClientResponse.h  DirectResponse.cpp  DirectResponse.h  ICYResponse.cpp  ICYResponse.h  UDPClient.cpp  UDPClient.h  UDPServer.cpp  UDPServer.h  err.cpp  err.h  radio-proxy.cpp  radio-proxy.h
src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/CSCommon/: CMakeLists.txt  CSCommon.vcxproj  CSCommon.vcxproj.filters  CSCommon_ORIGINAL.vcxproj  CSCommon_ORIGINAL.vcxproj.filters  CSCommon_ORIGINAL_CXX_cotire.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  stdafx.h
src/Gunz/: CMakeLists.txt  CTestTestfile.cmake  FunctionalListener.h  Gunz.rc  Gunz.vcxproj  Gunz.vcxproj.filters  Gunz_lib.vcxproj  Gunz_lib.vcxproj.filters  Gunz_lib_ORIGINAL.vcxproj  Gunz_lib_ORIGINAL.vcxproj.filters  Gunz_lib_ORIGINAL_CXX_cotire.cmake  Hitboxes.cpp  Hitboxes.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  MClient.cpp  MClient.h  MCommandLogFrame.cpp  MCommandLogFrame.h  MEmblemMgr.cpp  MEmblemMgr.h  MMatchClient.cpp  MMatchClient.h  MPartialBitmap.h  MSysInfo.cpp  MSysInfo.h  Mint4Gunz.cpp  Mint4Gunz.h  Mint4R2.cpp  Mint4R2.h  NATUPnP.h  NMCrypt.h  NewChat.cpp  NewChat.h  Portal.cpp  Portal.h  RGCommands.cpp  RGGlobal.h  RGMain.cpp  RGMain.h  (+401 more)
src/Locator/: CMakeLists.txt  CTestTestfile.cmake  CustomDefine.h  ExceptionAttacher.cpp  INSTALL.vcxproj  INSTALL.vcxproj.filters  Locator.cpp  Locator.h  Locator.rc  Locator.vcxproj  Locator.vcxproj.filters  LocatorDoc.cpp  LocatorDoc.h  LocatorView.cpp  LocatorView.h  Locator_ORIGINAL.vcxproj  Locator_ORIGINAL.vcxproj.filters  Locator_ORIGINAL_CXX_cotire.cmake  MCountryCodeFilter.cpp  MCountryCodeFilter.h  MLocator.cpp  MLocator.h  MLocatorConfig.cpp  MLocatorConfig.h  MLocatorDBMgr.cpp  MLocatorDBMgr.h  MLocatorStatistics.cpp  MLocatorStatistics.h  MLocatorUDP.cpp  MLocatorUDP.h  MLocatorView.cpp  MLocatorView.h  MLogManager.cpp  MLogManager.h  MServerStatus.cpp  MServerStatus.h  MainFrm.cpp  MainFrm.h  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  (+5 more)
src/MDatabase/: CMakeLists.txt
src/MatchServer/: CMakeLists.txt  CPSSOLib.h  CTestTestfile.cmake  ChildFrm.cpp  ChildFrm.h  CommandLogView.cpp  CommandLogView.h  ConsoleBar.cpp  ConsoleBar.h  DBQuestCachingData.cpp  DBQuestCachingData.h  ExceptionAttacher.cpp  GunGame.cpp  GunGame.h  IDatabase.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  LagCompensation.cpp  LagCompensation.h  MAsyncDBJob.cpp  MAsyncDBJob.h  MAsyncDBJob_BringAccountItem.cpp  MAsyncDBJob_BringAccountItem.h  MAsyncDBJob_CharFinalize.cpp  MAsyncDBJob_CharFinalize.h  MAsyncDBJob_Event.cpp  MAsyncDBJob_Event.h  MAsyncDBJob_FriendList.cpp  MAsyncDBJob_FriendList.h  MAsyncDBJob_GetLoginInfo.cpp  MAsyncDBJob_GetLoginInfo.h  MAsyncDBJob_InsertConnLog.cpp  MAsyncDBJob_InsertConnLog.h  MAsyncDBJob_UpdateCharInfoData.cpp  MAsyncDBJob_UpdateCharInfoData.h  MAsyncDBJob_WinTheClanGame.cpp  MAsyncDBJob_WinTheClanGame.h  MAsyncProxy.cpp  MAsyncProxy.h  MBMatchServer.cpp  (+166 more)
src/Mint2/: CMakeLists.txt  CTestTestfile.cmake  Doxyfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  MIDL.txt  Mint2.vcxproj  Mint2.vcxproj.filters  Mint2_ORIGINAL.vcxproj  Mint2_ORIGINAL.vcxproj.filters  Mint2_ORIGINAL_CXX_cotire.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  doxygen.css  stdafx.h
src/PartsIndexer/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PartsIndexer.vcxproj  PartsIndexer.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
src/PatchCreator/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PatchCreator.vcxproj  PatchCreator.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  main.cpp
src/RealSound/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  RealSound.vcxproj  RealSound.vcxproj.filters  RealSound_ORIGINAL.vcxproj  RealSound_ORIGINAL.vcxproj.filters  RealSound_ORIGINAL_CXX_cotire.cmake  cmake_install.cmake  stdafx.h
src/RealSpace2/: BuildGLSLShaders.bat  BuildHLSLShaders.bat  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  RealSpace2.vcxproj  RealSpace2.vcxproj.filters  RealSpace2_ORIGINAL.vcxproj  RealSpace2_ORIGINAL.vcxproj.filters  RealSpace2_ORIGINAL_CXX_cotire.cmake  cmake_install.cmake  stdafx.h
src/SafeUDP/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SafeUDP.vcxproj  SafeUDP.vcxproj.filters  SafeUDP_ORIGINAL.vcxproj  SafeUDP_ORIGINAL.vcxproj.filters  SafeUDP_ORIGINAL_CXX_cotire.cmake  cmake_install.cmake  stdafx.h
src/cmake/: Findlibcurl.cmake  macros.cmake  ucm.cmake
src/cml/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  all_unity.vcxproj  clean_cotire.vcxproj  clean_cotire.vcxproj.filters  cmake_install.cmake  cml.vcxproj  cml.vcxproj.filters  cml_ORIGINAL.vcxproj  cml_ORIGINAL.vcxproj.filters  cml_ORIGINAL_CXX_cotire.cmake  stdafx.h
src/launcher/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  launcher.vcxproj  launcher.vcxproj.filters  (+8 more)
(+945 files in other folders)
