add_library(curl INTERFACE)
if (UNIX)
	find_package(CURL REQUIRED)
	target_include_directories(curl INTERFACE ${CURL_INCLUDE_DIRS})
	target_link_libraries(curl INTERFACE ${CURL_LIBRARIES})
else()
	target_include_directories(curl INTERFACE include)
	find_library(curl_path NAMES libcurl PATHS lib/static)
	target_link_libraries(curl INTERFACE ${curl_path})
	target_compile_options(curl INTERFACE -DCURL_STATICLIB)
endif()
