add_library(zlib INTERFACE)
if (UNIX)
	find_package(ZLIB REQUIRED)
	target_include_directories(zlib INTERFACE ${ZLIB_INCLUDE_DIRS})
	target_link_libraries(zlib INTERFACE ${ZLIB_LIBRARIES})
else()
	target_include_directories(zlib INTERFACE include)
	find_library(zlib_path NAMES zlib PATHS lib)
	target_link_libraries(zlib INTERFACE ${zlib_path})
endif()
